--- a/Quizzapp.html
+++ b/Quizzapp.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizzapp</title>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     Quizzapp
 
     Jetzt noch mit Einleitung, die SHooooow beginnt, Hände hoch und AUgenzu.
+    <button>Action!</button>
+    <a href="#">KLicke mich</a>
 </body>
 </html>
